--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -4,12 +4,13 @@
 .root {
   position: relative;
   z-index: 100;
+  background-color: #0366D6;
 }
 
 .wrapper {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 960px;
+  max-width: 1200px;
   padding: 1em;
   display: flex;
 
