--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -7,7 +7,7 @@
   --color-light-gray: #b4bcc7;
   --color-very-light-gray: #e7ebed;
   --color-white: #fff;
-  --color-accent: #156dff;
+  --color-accent: #1D9AF2;
 
   /* Typography */
   --unit: 16;
@@ -60,6 +60,32 @@ button:active{
 }
 
 
+h1,
+h2,
+h3,
+h4 {
+    margin: .1rem 0;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    padding-left: 20px;
+}
+
+h3 {
+    font-size: 1.2rem;
+    padding-left: 40px;
+}
+
+h4 {
+    font-size: 1rem;
+    font-style: italic;
+    padding-left: 60px;
+}
 
 
 
