--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -5,6 +5,7 @@
   position: relative;
   z-index: 100;
   background-color: #0366D6;
+
 }
 
 .wrapper {
@@ -17,6 +18,11 @@
   @media (--media-min-small) {
     padding: 1.5em 1.5em;
   }
+}
+
+.logo {
+  flex: 1;
+    max-width: 300px;
 }
 
 .branding {
